skills and footer fertig

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,14 +1,19 @@
 <footer>
+    <div class="footer_container">
     <div class="footer">
         <img src="./assets/img/logo.svg" alt="">
         <span class="montserrat">
             ⒸMevlida Salendrkovic 2024 
         </span>
-        <div>
-            <img src="./assets/img/github.svg" alt="">
-            <img src="./assets/img/email.svg" alt="">
-            <img src="./assets/img/linkedin.svg" alt="">
+        <div class="icons_footer">
+            <img src="./assets/img/github_white.svg" alt="">
+            <img src="./assets/img/email_white.svg" alt="">
+            <img src="./assets/img/linkedin_white.svg" alt="">
         </div>
     </div>
-    <span class="montserrat" style="font-size: 18px;">Impressum</span>
+    <div>
+        <a class="montserrat" style="font-size: 18px;">Impressum</a>
+    </div>
+</div>
+    
 </footer>
