--- a/src/app/main-content/skill-set/skill-set.component.html
+++ b/src/app/main-content/skill-set/skill-set.component.html
@@ -1,3 +1,14 @@
-<section>
-    <h1 class="baloo">Skill set</h1>
-</section>
+
+<div class="background_container">
+    <div class="skill_set_container">
+        <h1 class="baloo">Skill set</h1>
+        <div>
+            @for (skill of skills; track $index) {
+            <div>
+                <img src="{{skill.src}}" alt="">
+                <span class="montserrat">{{skill.name}}</span>
+            </div>
+            }
+        </div>
+    </div>
+</div>
