--- a/src/app/main-content/skill-set/skill-set.component.scss
+++ b/src/app/main-content/skill-set/skill-set.component.scss
@@ -1,19 +1,62 @@
-section{
-    background-image: linear-gradient(128.94deg, #FF5959 -33.96%, #FF5959 36.71%, #DE0000 112.25%);
-    background-size: cover;
-    background-repeat: no-repeat;
+.background_container{
+    background: linear-gradient(128.94deg, #FF5959 -33.96%, #FF5959 36.71%, #DE0000 112.25%);
     width: 100%;
-    height:632px;
+    height: 632px;
+}
 
-    h1{
+.skill_set_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
+    >h1{
+        font-size: 96px;
+        line-height: 96px;
+        color: white;
+    }
+
+    >div{
+        width: 70%;
         display: flex;
         justify-content: center;
-        font-size: 96px;
-        font-weight: 800;
-        line-height: 96px;
-        letter-spacing: 0.01em;
-        text-align: left;
+        flex-wrap: wrap;
+        column-gap: 200px;
+        row-gap: 30px;
+
+    >div{
+        width: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+    >span {
         color: white;
-        padding-top: 100px;
+        text-align: center;
+        font-size: 16px;
     }
+
+    >img {
+        transition: transform 0.4s ease;
+    }
+
+    &:hover>img {
+        transform: translate(3px, -10px);
+        cursor: pointer;
+    }
+
+    &:hover>span {
+        font-weight: 700;
+        cursor: pointer;
+    }
+
+    }
+
+    }
+
 }
+    
+
