--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -12,7 +12,7 @@ footer{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 10px;
+        // gap: 10px;
         color: white;
         font-size: 24px;
         font-weight: 400;
@@ -25,6 +25,22 @@ footer{
 .footer{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 1740px;
     height: 69px;
+}
+
+.icons_footer{
+    display: flex;
+    gap: 20px;
+}
+
+.footer_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    a{
+        color: white;
+    }
 }
