contact style fertig

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -8,6 +8,6 @@
 
             If you think I’d be a good match for your projects, contact me!
         </p>
-        <button class="poppins">Send a message</button> 
+        <a class="poppins">Send a message</a> 
     </div>
 </div>
