--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,1 +1,41 @@
-<p>contact works!</p>
+<section>
+    <h1 class="baloo">Contact</h1>
+
+    <div class="contact_container">
+        <div style="width:773px;">
+            <h2 class="montserrat">Got a problem to solve?</h2>
+            <span class="montserrat">Contact me through this form, I am interested in hearing from you, knowing your ideas and contributing to your projects with my work.</span><br>
+            <p class="montserrat">Need a Frontend developer? <b>Contact me!</b> </p>
+            <div><img style="width: 204px; height: 204px; padding-left: 150px; margin-top: 20px;" src="./assets/img/o-mitte.svg" alt=""></div>
+        </div>
+
+        <div class="contact_form">
+            <form action="">
+                <input type="text" name="Name" id="Name" placeholder="Your name">
+                <input type="text" name="Email" id="Email" placeholder="Your email">
+                <textarea name="Message" id="Message" cols="30" rows="10" placeholder="Your message"></textarea>
+
+                <div class="privacy-policy">
+                    <div class="checkbox"><input type="checkbox" style="width: 24px; height: 24px;"></div>
+                    <div>
+                        <span >
+                            I've read the <a>privacy policy </a> and agree to the processing
+                            of my data as
+                            outlined.
+                        </span>
+                    </div>
+                </div>
+                <button>Say hello :)</button>
+
+            </form>
+        </div>
+
+    </div>
+
+    <div class="go_up_container">
+        <a href="#" class="go_up"></a>
+        <img style="width: 73px; height: 73px" src="./assets/img/o-mitte.svg" alt="">
+    </div>
+</section>
+
+
