--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -1,1 +1,16 @@
-<p>my-work works!</p>
+<section>
+<div class="main_content_container">
+    <div class="headline_container" data-aos="fade-left">
+        <img class="circle_first" src="./assets/img/o-mitte.svg" alt="">
+      <h1 class="baloo">My work</h1>
+      <img class="circle_second" src="./assets/img/o-mitte.svg" alt="">
+    </div>
+    <span data-aos="fade-left" class="montserrat">
+        Feel free to try out my latest development projects and look into their code. 
+    </span>
+    <div class="project">
+      <app-project></app-project>
+    </div>
+  </div>
+
+</section>
