--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -16,22 +16,22 @@ section{
         height: 917px;
         position: absolute;
         bottom:0;
-        left: 32px;
+        right: 32px;
     }
 
     h1{
         width: 645px;
         height: 221px;
         position: absolute;
-        top: 305px;
-        left:1031px;
+        top: 405px;
+        left: 100px;
         // right:100px;
         font-size: 128px;
         font-weight: 800;
         line-height: 110px;
         letter-spacing: -0.025em;
         text-align: left;
-        color: #FF5959;
+        color: white;
         margin-block-start: 0;
         margin-block-end: 0;
         
@@ -41,13 +41,13 @@ section{
         width: 700px;
         height: 61px;
         position: absolute;
-        top: 227px;
-        left: 1031px;
+        top: 327px;
+        left: 100px;
         // right: 50px;
         font-size: 64px;
         font-weight: 400;
         text-align: left;
-        color: #FF5959;
+        color: white;
         margin-block-start: 0;
         margin-block-end: 0;
     }
@@ -56,13 +56,13 @@ section{
         font-size: 23px;
         font-weight: 500;
         line-height: 27.6px;
-        text-align: left;
-        color: #FF5959;
+        text-align: left;    
+        color: #FF5959; 
         width: 95px;
         height: 28px;
         position: absolute;
         top: 680px;
-        left: 1300px;
+        right: 60px;
         gap: 0px;
         opacity: 0px;
         margin-block-start: 0;
@@ -81,6 +81,7 @@ section{
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: transform 0.2s ease;
        
 }
 
@@ -88,18 +89,28 @@ section{
     position: absolute;
     bottom: 210px;
     right: 150px;
+
+        &:hover {
+            transform: translateX(-10px);
+        }
 }
 
 .icons_email{
     position: absolute;
     bottom: 140px;
     right: 150px;
+    &:hover {
+        transform: translateX(-10px);
+    }
 }
 
 .icons_linkedin{
     position: absolute;
     bottom: 70px;
     right: 150px;
+    &:hover {
+        transform: translateX(-10px);
+    }
 }
 
 
@@ -109,10 +120,10 @@ section{
     height: 330px;
     position: absolute;
     bottom: 0;
-    left: 1340px;
+    right: 100px;
     gap: 0px;
     border: 2px 0px 0px 0px;
     opacity: 0px;
-    border: 2px solid #FF5959;
+    border: 2px solid  #FF5959;
 }
 
