--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,12 +6,12 @@
             ⒸMevlida Salendrkovic 2024 
         </span>
         <div class="icons_footer">
-            <img src="./assets/img/github_white.svg" alt="">
-            <img src="./assets/img/email_white.svg" alt="">
-            <img src="./assets/img/linkedin_white.svg" alt="">
+            <a href=""><img src="./assets/img/github_white.svg" alt=""></a>
+            <a href=""><img src="./assets/img/email_white.svg" alt=""></a>
+            <a href=""><img src="./assets/img/linkedin_white.svg" alt=""></a>
         </div>
     </div>
-    <div>
+    <div class="imprint_container">
         <a class="montserrat" style="font-size: 18px;">Impressum</a>
     </div>
 </div>
