--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -42,5 +42,46 @@ footer{
 
     a{
         color: white;
+        cursor: pointer;
+            &:hover{
+                transform: scale(1.3);
+            }
+    }
+
+    .imprint_container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        a {
+            bottom: 0;
+            color: white;
+            text-decoration: none;
+            position: relative;
+            cursor: pointer;
+    
+            &::after {
+                content: '';
+                position: absolute;
+                width: 60%;
+                height: 2px;
+                bottom: -5px;
+                left: 0;
+                opacity: 0;
+                background-color: white;
+                transition: left 0.3s ease;
+            }
+    
+            &:hover::after {
+                opacity: 1;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+    
+            &:hover {
+                font-weight: 600;
+            }
+        }
     }
 }
+
