--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -10,11 +10,19 @@
         </div>
 
         <div class="contact_form">
-            <form action="">
-                <input type="text" name="Name" id="Name" placeholder="Your name">
-                <input type="text" name="Email" id="Email" placeholder="Your email">
-                <textarea name="Message" id="Message" cols="30" rows="10" placeholder="Your message"></textarea>
-
+            <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+                <input #name="ngModel" [(ngModel)]="contactData.name" type="text" name="Name" id="Name" placeholder="Your name" required="">
+                @if (!name.valid && name.touched && !name.disabled) {
+                    <span class="error-message">Your name is required</span>
+                }
+                <input #email="ngModel" [(ngModel)]="contactData.email" type="text" name="Email" id="Email" placeholder="Your email" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}">
+                @if (!email.valid && email.touched && !email.disabled) {
+                    <span class="error-message">Your email is required</span>
+                }
+                <textarea #message="ngModel"  [(ngModel)]="contactData.message" name="Message" minlength="10" id="Message" cols="30" rows="10" placeholder="Your message" required=""></textarea>
+                    @if( !message.valid && message.touched) {
+                        <span class="error-message">Your email is required</span> 
+                    }
                 <div class="privacy-policy">
                     <div class="checkbox"><input type="checkbox" style="width: 24px; height: 24px;"></div>
                     <div>
@@ -25,9 +33,41 @@
                         </span>
                     </div>
                 </div>
-                <button>Say hello :)</button>
 
-            </form>
+                <!-- <div class="privacy-policy">
+                    <div (click)="handleCheckbox()"
+                        [ngClass]="{'checkbox-checked': isChecked, 'checkbox-unchecked': !isChecked}"
+                        class="checkbox"></div>
+                    <div>
+                        <span >
+                            I've read the <a
+                                [ngStyle]="{ 'width': isPrivacyPolicy === 'privacy policy' ? '110px' : '180px' }"
+                                (click)="showPrivacyPolicy()">{{isPrivacyPolicy}} </a> and agree to the processing
+                            of my data as
+                            outlined.
+                        </span>
+                    </div>
+                </div> -->
+
+                @if (showErrorCheckbox) {
+                    <span  class="error-message">Please accept the privacy policy.</span>
+                    }
+                    <button class="disabled-button" [ngClass]="{
+                        'enabled-button':
+                        isChecked &&
+                        name.valid &&
+                        name.touched &&
+                        !name.disabled &&
+                        email.valid &&
+                        email.touched &&
+                        !email.disabled &&
+                        message.valid &&
+                        message.touched &&
+                        !message.disabled}" type="submit">Say hello :)</button>
+                </form>
+              
+
+        
         </div>
 
     </div>
@@ -37,5 +77,4 @@
         <img style="width: 73px; height: 73px" src="./assets/img/o-mitte.svg" alt="">
     </div>
 </section>
-
 
