--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <section>
     <app-header></app-header>
-    <img src="./assets/img/file (3).png" alt="">
+    <img src="./assets/img/mevlida_bg.png" alt="">
     <h2 class="montserrat">Hello! Iam Mevlida</h2>
     <h1 class="baloo">FRONTEND DEVELOPER</h1>
 
@@ -12,9 +12,9 @@
     
 
     <div class="icons">
-       <a class="icons_github" href="#"><img style="width: 40px; height: 40px" src="./assets/img/github.svg" alt=""></a> 
+       <a class="icons_github" href="https://github.com/mevlidaS" target="_blank"><img style="width: 40px; height: 40px" src="./assets/img/github.svg" alt=""></a> 
         <a  class="icons_email" href="#"><img style="width: 40px; height: 40px" src="./assets/img/email.svg" alt=""></a>
-        <a class="icons_linkedin" href="#"><img style="width: 40px; height: 40px" src="./assets/img/linkedin.svg" alt=""></a>
+        <a class="icons_linkedin" href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img style="width: 40px; height: 40px" src="./assets/img/linkedin.svg" alt=""></a>
           
     </div>
 </section>
