--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,9 +6,9 @@
             ⒸMevlida Salendrkovic 2024 
         </span>
         <div class="icons_footer">
-            <a href=""><img src="./assets/img/github_white.svg" alt=""></a>
-            <a href=""><img src="./assets/img/email_white.svg" alt=""></a>
-            <a href=""><img src="./assets/img/linkedin_white.svg" alt=""></a>
+            <a href="https://github.com/mevlidaS" target="_blank"><img src="./assets/img/github_white.svg" alt=""></a>
+            <a href="#"><img src="./assets/img/email_white.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img src="./assets/img/linkedin_white.svg" alt=""></a>
         </div>
     </div>
     <div class="imprint_container">
