--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,1 +1,18 @@
-<p>imprint works!</p>
+<div class="background_container">
+    <app-header></app-header>
+<div class="imprint-container">
+    <img class="background-img " src="./assets/img/o-mitte.svg" alt="">
+    <h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Mevlida Salendrkovic <br> 
+    Pelkovenstr. 77<br> 
+    80992 München <br> 
+    </p><p> <strong>Vertreten durch: </strong><br>
+    Mevlida Salendrkovic<br>
+    </p><p><strong>Kontakt:</strong> <br>
+    Telefon: 0157-79434942<br>
+    E-Mail: <a href='mailto:mevlida.salendrkovic@gmail.com'>mevlida.salendrkovic&#64;gmail.com</a><br>
+</p><br> 
+   <p>Website Impressum von <a href="https://www.impressum-generator.de">impressum-generator.de</a></p> 
+     </div>
+
+    </div>
+     
