--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="imprint_container">
-        <a class="montserrat" style="font-size: 18px;">Impressum</a>
+        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">Impressum</a>
     </div>
 </div>
     
