--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -17,10 +17,17 @@ section{
     }
 
     form{
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // gap: 20px;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 22px;
+
+
     }
 
     .contact_container{
@@ -101,6 +108,9 @@ section{
                 border: 2px solid #FF5959;
             }
 
+
+    }
+
     }
 }
 .privacy-policy{
@@ -117,9 +127,18 @@ section{
 
     }
 
+    .button-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
     a{
         text-decoration: none;
         color: #FF5959;
+        cursor: pointer;
 
         &:hover{
             text-decoration: underline;
@@ -129,7 +148,9 @@ section{
     }
 }
 
-button{
+
+
+.button_disabled{
     width: 200px;
     padding: 15px 30px 15px 30px;
     height: 58px;
@@ -146,7 +167,32 @@ button{
 
 }
 
+.button_enabled{
+    width: 200px;
+    padding: 15px 30px 15px 30px;
+    height: 58px;
+    gap: 10px;
+    border-radius: 10px;
+    border: 2px 0px 0px 0px;
+    opacity: 0px;
+    border: 2px solid #FF5959;
+    box-shadow: 5px 5px 15px 0px #00000026;
+    cursor: pointer;
+    font-family: 'Montserrat';
+    font-size: 23px;
+    color:#FF5959;
+
+    &:hover{
+        animation: gradient-animation 0.05s ease-in-out forwards;
+        color: white;
+        transform: scale(1.1);
+        background: radial-gradient(74.22% 74.22% at 19.79% 22.42%, #FF5959 6.25%, #FF5959 51.56%, #DE0000 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+
+    }
+
 }
+
+
 
 .go_up_container{
     display: flex;
@@ -172,6 +218,47 @@ button{
     font-family: 'Montserrat';
     color: #E61C40;
     margin-top: -20px;
-    margin-left: 50px;
+    // margin-left: 50px;
 }
 
+.flex_column_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 22px;
+
+    
+}
+
+.popup_background {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 5;
+    left: 0;
+    top: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(20, 29, 47, 0.95);
+    overflow: hidden;
+    transition: 0.5s;
+    font-size: 24px;
+    .popup {
+      position: relative;
+      top: 25%;
+      width: 100%;
+      text-align: center;
+      margin-top: 30px;
+    }
+  }
+
+  .checkbox {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+
+    &:hover {
+        filter: drop-shadow(0px 0px 5px #FF5959);
+    }
+  }
+  
