--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <section>
     <app-header></app-header>
-    <img src="./assets/img/mevlida_bg.png" alt="">
+     <!-- <img  class="background-img" src="./assets/img/o-mitte.svg" alt=""> -->
+    <img class="mevlida-img" src="./assets/img/mevlida_bg.png" alt="">
     <h2 class="montserrat">Hello! Iam Mevlida</h2>
     <h1 class="baloo">FRONTEND DEVELOPER</h1>
 
