--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -3,6 +3,7 @@
 section{
     height: 100vh;
     width: 100%;
+    // background: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
     background-image: url(./../../../assets/img/hero-background.svg);
     background-size: cover;
     background-position: 50% 50%;
@@ -11,11 +12,21 @@ section{
     flex-direction: column;
     align-items: center;
 
-    img{
+    //     .background-img {
+    //         position: absolute;
+    // height: 892px;
+    // width: 80%;
+    // z-index: 0;
+    // right: 0px;
+    // top: 200px;
+
+    //     }
+
+    .mevlida-img{
         width: auto;
         height: 917px;
         position: absolute;
-        bottom:0;
+      bottom:0;
         right: 32px;
     }
 
@@ -31,7 +42,7 @@ section{
         line-height: 110px;
         letter-spacing: -0.025em;
         text-align: left;
-        color: white;
+        color:white;
         margin-block-start: 0;
         margin-block-end: 0;
         
