--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -14,7 +14,7 @@
 
     <div class="icons">
        <a class="icons_github" href="https://github.com/mevlidaS" target="_blank"><img style="width: 40px; height: 40px" src="./assets/img/github.svg" alt=""></a> 
-        <a  class="icons_email" href="#"><img style="width: 40px; height: 40px" src="./assets/img/email.svg" alt=""></a>
+        <a  class="icons_email" href="mailto:mevlida.salendrkovic@gmail.com"><img style="width: 40px; height: 40px" src="./assets/img/email.svg" alt=""></a>
         <a class="icons_linkedin" href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img style="width: 40px; height: 40px" src="./assets/img/linkedin.svg" alt=""></a>
           
     </div>
