--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,5 +1,5 @@
-<app-landing-page></app-landing-page>
-<app-about-me></app-about-me>
-<app-skill-set></app-skill-set>
-<app-my-work></app-my-work>
-<app-contact></app-contact>
+<app-landing-page id="landingPage"></app-landing-page>
+<app-about-me id="aboutMe"></app-about-me>
+<app-skill-set id="skillSet"></app-skill-set>
+<app-my-work id="myWork"></app-my-work>
+<app-contact id="contact"></app-contact>
