--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,12 +7,12 @@
         </span>
         <div class="icons_footer">
             <a href="https://github.com/mevlidaS" target="_blank"><img src="./assets/img/github_white.svg" alt=""></a>
-            <a href="#"><img src="./assets/img/email_white.svg" alt=""></a>
+            <a href="mailto:mevlida.salendrkovic@gmail.com"><img src="./assets/img/email_white.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img src="./assets/img/linkedin_white.svg" alt=""></a>
         </div>
     </div>
     <div class="imprint_container">
-        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">Impressum</a>
+        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">Imprint</a>
     </div>
 </div>
     
